tweaks for my presentation

--- a/presentation/intrototypescript.html
+++ b/presentation/intrototypescript.html
@@ -37,11 +37,13 @@
 				<h1>Introduction to TypeScript</h1>
 				<p>(👩🏾‍💻&nbsp;for JavaScript developers&nbsp;👨🏼‍💻)</p>
 				<p><a href="https://twitter.com/JeremyLikness" target="_blank">@JeremyLikness</a></p>
-				
+				<p><a href="https://twitter.com/chrisdopuch" target="_blank">@ChrisDopuch</a></p>
+
 			</section>
 
 			<section>
 				<img src="./images/profile1_sm.jpg" style="float: right; width: 120px; height: 120px; border-radius: 120px;" />
+				<h2>Written By:</h2>
 				<h2>Jeremy Likness</h2>
 				<blockquote>Cloud Developer Advocate for Microsoft</blockquote>
 				<ul>
@@ -54,9 +56,23 @@
 			</section>
 
 			<section>
+				<img src="./images/chris.jpg" style="float: right; width: 120px; height: 120px; border-radius: 120px;" />
+				<h2>Presented By:</h2>
+				<h2>Chris Dopuch</h2>
+				<blockquote>Software Developer at Moovel</blockquote>
+				<ul>
+					<li>💾&nbsp;20+ Years Alive</li>
+					<li>📝&nbsp;Author of a blog post, once</li>
+					<li>🎤&nbsp;Loud speaker</li>
+					<li>🗑️&nbsp;100% garbage-based diet and walker&nbsp;🚶</li>
+					<li>🌐&nbsp;<a href="http://http://www.chrisdopu.ch/about/" target="_blank">http://chrisdopu.ch</a></li>
+				</ul>
+			</section>
+
+			<!-- <section>
 				<canvas id="bitcvs" width="320" height="340"></canvas>
 				<h1>Cloud Developer Advocacy</h1>
-			</section>
+			</section> -->
 
 			<section>
 				<h2>Wat?!</h2>
@@ -149,7 +165,7 @@
 						<a href="https://github.com/JeremyLikness/intro-to-typescript" target="_blank">https://github.com/JeremyLikness/intro-to-typescript</a>
 					</strong>
 				</p>
-			
+
 			</section>
 
 		</div>
